# VZGL-Mini

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: geometry.h  model.h  tgaimage.h  wireframe.h
src/: main.cpp  model.cpp  tgaimage.cpp  wireframe.cpp
